####
# Pips database
####

###
# Control data
###

#pips
DATAPREFIX=int

#chip geometry
CHIPS=30 50 85 110 220 330
CHIP_PFX=xc5vlx
SITE_INCL=sites_v5.h
GENSCRIPT=generate_v5_chip.pl

#Wire parsing
DBGENSCRIPT=$(srcdir)/../wires_to_db_v5.pl

INST_DB_DIR=$(pkgdatadir)/virtex5

include $(srcdir)/../build_common.inc
